/*
 * $Id: ChangeLog,v 1.2752 2004/04/05 11:22:58 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-04-05 09:10 UTC-0500 Sylvain Robert (s.robert/at/videotron.ca)
  * xharbour/source/rtl/fserror.c
    * Put case ETXTBSY under #if defined( HB_OS_UNIX )

2004-04-05 13:34 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  + xharbour/source/rtl/fserror.c
    + I missed it in my previous commit

2004-04-05 13:32 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rtl/filesys.c
    ! BCC compilation fixed

2004-04-05 17:10 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/compiler/hbpcode.c
    - remmed: unused hb_compPrivateFind()
  * contrib/libct/files.c
    - remmed: unused osToHarbourMask()
  * source/rtl/gtwvt/gtwvt.v
    - remmed: unused hb_wvt_gtValidWindowSize()
  * contrib/libnf/n2color.c
    - remmed: unused _ftI2Color()
    ! fix inconsistent linkage : _ftGetColorStr()
  * contrib/unicode/hbc7.c
    ! fix inconsistent linkage : str2ue7()
  * contrib/unicode/hbcrpt128.c
    - removed unused variable: tmpKey
  * contrib/winprn/tprint.prg
    - remmed unused fucntions:
      DELETEOBJECT(),SELECTOBJECT(),SETTEXTCHARACTEREXTRA()

  * source/pp/pragma.c
  * source/pp/ppcore.c
    % code formatting, mainly change tabs->spaces and put singe-liner into {}

2004-04-05 04:38 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/makefile.bc
  * xharbour/makefile.nt
  * xharbour/makefile.vc
  * xharbour/source/rtl/Makefile
    + fserror.c added

  * xharbour/source/rtl/diskspac.c
  * xharbour/source/rtl/disksphb.c
    * use current version hb_parc() instead of hb_parcx()

  * xharbour/include/hbdefs.h
    + hack for 64bit systems and [U]LONG_{MIN,MAX} definition

  * xharbour/include/hbapifs.h
    * new macro HB_WIN32_IO instead of X__WIN32__