@@ -1,5 +1,5 @@
 /*
- * $Id: fserror.c,v 1.1 2004/04/05 11:22:59 druzus Exp $
+ * $Id: fserror.c,v 1.2 2004/04/05 13:12:18 srobert Exp $
  */
 
 /*
@@ -90,9 +90,9 @@ static int hb_errnoToDosError( int ErrCode )
          iResult = 4;   /* Too many open files */
          break;
       case EACCES:
-      #if defined( HB_OS_UNIX )
-         case ETXTBSY:
-      #endif
+#ifdef ETXTBSY
+      case ETXTBSY:
+#endif
          iResult = 5;   /* Access denied */
          break;
       case EBADF:
