@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2752 2004/04/05 11:22:58 druzus Exp $
+ * $Id: ChangeLog,v 1.2753 2004/04/05 13:09:54 srobert Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,16 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-04-05 16:48 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
+  * xharbour/source/rtl/fserror.c
+    * ETXTBSY inside #ifdef ETXTBSY
+
+  * xharbour/source/rtl/filesys.c
+    * compilation fixes
+
+  * xharbour/source/rtl/hbffind.c
+    * use new error codes
 
 2004-04-05 09:10 UTC-0500 Sylvain Robert (s.robert/at/videotron.ca)
   * xharbour/source/rtl/fserror.c
